--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ log/*
 !example/image.png
 
 # train
-/scripts/archive_20250916
+/scripts/archive*
 /train/fine_tuned_checkpoints
 /train/*data
+/train/wandb
+/train/log
